2006-01-04  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_cd): fix crash when cd -b was used.
	Ville's patch.

2006-01-03  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (handle_auto): changed autocall semantics to
	include 'smart' mode, where the autocall transformation is NOT
	applied if there are no arguments on the line.  This allows you to
	just type 'foo' if foo is a callable to see its internal form,
	instead of having it called with no arguments (typically a
	mistake).  The old 'full' autocall still exists: for that, you
	need to set the 'autocall' parameter to 2 in your ipythonrc file.

	* IPython/completer.py (Completer.attr_matches): add
	tab-completion support for Enthoughts' traits.  After a report by
	Arnd and a patch by Prabhu.

2006-01-02  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/ultraTB.py (_fixed_getinnerframes): added Alex
	Schmolck's patch to fix inspect.getinnerframes().

	* IPython/iplib.py (InteractiveShell.__init__): significant fixes
	for embedded instances, regarding handling of namespaces and items
	added to the __builtin__ one.  Multiple embedded instances and
	recursive embeddings should work better now (though I'm not sure
	I've got all the corner cases fixed, that code is a bit of a brain
	twister).

	* IPython/Magic.py (magic_edit): added support to edit in-memory
	macros (automatically creates the necessary temp files).  %edit
	also doesn't return the file contents anymore, it's just noise.

	* IPython/completer.py (Completer.attr_matches): revert change to
	complete only on attributes listed in __all__.  I realized it
	cripples the tab-completion system as a tool for exploring the
	internals of unknown libraries (it renders any non-__all__
	attribute off-limits).  I got bit by this when trying to see
	something inside the dis module.

2005-12-31  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (InteractiveShell.__init__): add .meta